<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_menu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3">

        <EditText
            style="@style/editTextBase"
            android:inputType="textPersonName"
            android:id="@+id/editTextMemberName"
            android:hint="@string/enter_name"
            android:maxLength="150" />

        <EditText
            style="@style/editTextBase"
            android:inputType="textPostalAddress"
            android:id="@+id/editTextAddress"
            android:hint="@string/postal_address"
            android:maxLength="80" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:id="@+id/linearLayout4"
        android:clickable="false">

        <EditText
            style="@style/editTextBase"
            android:inputType="textEmailAddress"
            android:id="@+id/editTextEmail"
            android:hint="@string/email"
            android:maxLength="25"
            android:layout_weight="0.4" />
        <!-- Use layout_weight and decimal parameter to represent % i.e. 0.4 = 40% -->

        <EditText
            style="@style/editTextBase"
            android:inputType="phone"
            android:id="@+id/editTextPhone"
            android:layout_weight="0.6"
            android:hint="@string/phone"
            android:maxLength="12"/>
        <!-- Use layout_weight and decimal parameter to represent % i.e.0.6 = 60% -->
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5"
        android:clickable="false">

        <EditText
            style="@style/editTextBase"
            android:layout_weight="0.4"
            android:inputType="numberDecimal"
            android:id="@+id/editTextAccNo"
            android:hint="@string/acc_no"
            android:maxLength="20" />

        <EditText
            style="@style/editTextBase"
            android:layout_weight="0.6"
            android:id="@+id/editTextBank"
            android:hint="@string/bank"
            android:maxLength="15" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout6"
        android:clickable="false">

        <EditText
            style="@style/editTextBase"
            android:layout_weight="0.4"
            android:inputType="numberDecimal"
            android:id="@+id/editTextICno"
            android:hint="@string/ic_no"
            android:maxLength="12" />

        <EditText
            style="@style/editTextBase"
            android:focusableInTouchMode="false"
            android:layout_weight="0.6"
            android:inputType="date"
            android:id="@+id/editTextDateJoined"
            android:hint="@string/date_joined"
            android:maxLength="12" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout7"
        android:clickable="false">

        <EditText
            style="@style/editTextBase"
            android:layout_weight="0.4"
            android:id="@+id/editTextPGusername"
            android:hint="@string/username"
            android:maxLength="20" />

        <Spinner
            android:id="@+id/spinnerPackageName"
            android:spinnerMode="dialog"
            android:layout_width="190dp"
            android:layout_weight="0.17"
            android:layout_height="wrap_content"
            android:maxLength="12" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_button"
                android:id="@+id/buttonDeleteRecord"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:enabled="true"
                android:onClick="onClickDeleteMember" />

            <Spinner
                android:id="@+id/spinnerMemberName"
                android:spinnerMode="dialog"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_alignBottom="@+id/buttonDeleteRecord"
                android:textAlignment="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_button"
                android:id="@+id/buttonEditRecord"
                android:enabled="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="onClickEditMember" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
