<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_menu"
    tools:context="com.fhb.powergoldv1.MainActivity">

    <android.support.v7.widget.Toolbar
        style="@style/DarkToolBarTheme"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/toolbar"/>

    <TextView
        style="@style/main_title"
        android:text="@string/app_name"
        android:id="@+id/textViewMainTitle"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/sub_title"
        android:text="@string/sub_title"
        android:id="@+id/textViewPersonalAssistance"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/llayoutUserInfo"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/relativeLayoutLabel">
        <TextView
            style="@style/editTextBase"
            android:textColor="@color/gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Package"
            android:layout_marginStart="40dp"
            android:layout_alignParentStart="true"
            android:id="@+id/textViewPackage" />

        <TextView
            style="@style/editTextBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gold"
            android:text="Name:"
            android:id="@+id/textViewUsername"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            style="@style/editTextBase"
            android:textColor="@color/gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="RegDate"
            android:id="@+id/textViewRegDate"
            android:layout_marginEnd="40dp"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/relativeLayoutLabel"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textViewPersonalAssistance" >

        <TextView
            style="@style/editTextBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="Package"
            android:id="@+id/textView70"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            style="@style/editTextBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="Name"
            android:id="@+id/textView69"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            style="@style/editTextBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="Since"
            android:id="@+id/textView71"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Button
        style="@style/button_menu"
        android:text="@string/current_rate"
        android:id="@+id/button_CurrentRate"
        android:onClick="onClickMainMenu"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/llayoutUserInfo"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/button_menu"
        android:text="@string/registration"
        android:id="@+id/buttonAddMember"
        android:onClick="onClickMainMenu"
        android:layout_below="@+id/button_CurrentRate"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/button_menu"
        android:text="@string/re_purchase"
        android:id="@+id/button_Purchase"
        android:onClick="onClickMainMenu"
        android:layout_below="@+id/buttonAddMember"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/button_menu"
        android:text="@string/my_inventory"
        android:id="@+id/button_MyInventory"
        android:onClick="onClickMainMenu"
        android:layout_below="@+id/button_Purchase"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/button_menu"
        android:text="@string/package_info"
        android:id="@+id/button_PackageInfo"
        android:onClick="onClickMainMenu"
        android:layout_below="@+id/button_MyInventory"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/button_menu"
        android:text="@string/about"
        android:id="@+id/button_About"
        android:onClick="onClickMainMenu"
        android:layout_below="@+id/button_PackageInfo"
        android:layout_centerHorizontal="true" />
</RelativeLayout>

